Minor hover glitch fix on Firefox 9 What's New page (Bug 698850)
git-svn-id: svn+ssh://svn.mozilla.org/projects/mozilla.com/trunk@98953 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/style/firefox/9/whatsnew-page.css
+++ b/style/firefox/9/whatsnew-page.css
@@ -415,6 +415,11 @@ input:-moz-placeholder {
     -moz-transform: rotate(90deg);
 }
 
+#expand:hover,
+#expand:active {
+    text-decoration: none;
+}
+
 .attribution {
     clear: both;
     font-size: 10px;
